kubernetes/azurewebsiets/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: azurewebsiets
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: nginx
  template:
    metadata:
      labels: 
        app: nginx
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: nginx
          image: nginx:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
          volumeMounts:
            # - mountPath: "/var/www/html"
            - mountPath: "/usr/share/nginx/html"
              name: persistent-storage
      volumes:
        # https://github.com/kubernetes-sigs/blob-csi-driver/blob/master/deploy/example/e2e_usage.md
        - name: persistent-storage
          csi:
            driver: blob.csi.azure.com
            volumeAttributes:
              containerName: content  # required
              secretName: azure-secret  # required
              mountOptions: "-o allow_other --file-cache-timeout-in-seconds=120"  # optional
